--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,20 @@ color: aqua !important;
   height:200px;
 
 }
+.errorpage{
+  color: red;
+  padding: 150px;
+}
+.btn-add{
+  background-color: rgb(210, 210, 42) !important;
+}
+.btn-add:hover{
+  background-color: greenyellow !important;
+}
+.imgss{
+  height: 500px;
+  box-shadow:1px 2px 10px 0.5px black;
+}
+.red{
+  color: red;
+}
